--- a/src/scss/blocks/cover-link/core-cover.scss
+++ b/src/scss/blocks/cover-link/core-cover.scss
@@ -1,7 +1,7 @@
 ///
 /// Cover
 ///
-@use "../base/variables" as *;
+@use "../../base/variables" as *;
 
 /* Block Style: Cover Link
 --------------------------------------------- */
