--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -17,8 +17,9 @@
 @use "./base/variables";
 @use "./base/global";
 @use "./base/typography";
-@use "./base/elements";
 @use "./base/form";
+
+@use "./elements/button";
 
 @use "./utilities/keyframes";
 @use "./utilities/helpers";
