--- a/src/scss/utilities/helpers.scss
+++ b/src/scss/utilities/helpers.scss
@@ -1,12 +1,16 @@
 /**
  * Helper classes
- * @version 0.2.0
+ * @version 0.3.0
  */
 @use "../base/variables" as *;
 
 /* Helpers
 --------------------------------------------- */
-/* Overflow */
+
+/**
+ * Title: Overflow
+ * Description: Overflow classes for hiding content
+ **/
 .overflow-hidden {
 	overflow: hidden;
 }
@@ -14,7 +18,9 @@
 	overflow: initial;
 	overflow: clip;
 }
-/* Flex */
+/**
+ * Title: Flex
+ **/
 .flex-row {
 	flex-direction: row;
 }
@@ -28,7 +34,9 @@
 	flex-shrink: 1;
 }
 
-/* Positions */
+/**
+ * Title: Positions
+ **/
 .position-absolute {
 	position: absolute;
 }
@@ -36,7 +44,9 @@
 	position: relative;
 }
 
-/* z-index */
+/**
+ * Title: z-index
+ **/
 .z--1 {
 	z-index: 1000;
 }
@@ -71,7 +81,9 @@
 	z-index: 9999;
 }
 
-/* Top */
+/**
+ * Title: Top
+ **/
 .top-10 {
 	top: var(--wp--preset--spacing--10) !important;
 }
@@ -94,12 +106,16 @@
 	top: var(--wp--preset--spacing--70) !important;
 }
 
-/* Blur */
+/**
+ * Title: Blur
+ **/
 .blur-5 {
 	backdrop-filter: blur(5px);
 }
 
-/* Text */
+/**
+ * Title: Text
+ **/
 .nowrap {
 	white-space: nowrap;
 }
@@ -114,12 +130,16 @@
 	}
 }
 
-/* Height */
+/**
+ * Title: Height
+ **/
 .has-no-max-height {
 	max-height: none !important;
 }
 
-/* Rotate */
+/**
+ * Title: Rotate
+ **/
 .rotate-plus-2 {
 	transform: rotate(2deg);
 }
@@ -160,6 +180,9 @@
 			min-height: 100svh;
 		}
 
+		/**
+ 		* Title: Alignment
+ 		**/
 		.#{$prefix}-left {
 			justify-content: flex-start !important;
 			text-align: left;
