Update section styles

--- a/src/scss/elements/button.scss
+++ b/src/scss/elements/button.scss
@@ -4,11 +4,11 @@
 
 /* Button
 --------------------------------------------- */
-.wp-element-button:hover {
-	background-color: color-mix(
-		in srgb,
-		var(--wp--preset--color--brand-2) 95%,
-		transparent
-	);
-	opacity: 1;
-}
+// .wp-element-button:hover {
+// 	background-color: color-mix(
+// 		in srgb,
+// 		var(--wp--preset--color--brand-2) 95%,
+// 		transparent
+// 	);
+// 	opacity: 1;
+// }
