Update footer section style via scss

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -21,6 +21,8 @@
 
 @use "./elements/button";
 
+@use "./parts/footer";
+
 @use "./utilities/keyframes";
 @use "./utilities/helpers";
 @use "./utilities/on-hover";
