--- a/src/scss/block-styles/fill/core-button.scss
+++ b/src/scss/block-styles/fill/core-button.scss
@@ -7,9 +7,9 @@
 .wp-block-button:not([class*="is-style-"]) > .wp-block-button__link,
 .wp-block-button.is-style-fill > .wp-block-button__link {
 	/* Hover effect for buttons without a background */
-	&:not(.has-background):hover {
-		background-color: var(--wp--preset--color--brand-2);
-	}
+	// &:not(.has-background):hover {
+	// 	background-color: var(--wp--preset--color--brand);
+	// }
 
 	&.has-background:hover {
 		background-image: linear-gradient(
