Add header section style scss

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -22,6 +22,7 @@
 @use "./elements/button";
 
 @use "./parts/footer";
+@use "./parts/header";
 
 @use "./utilities/keyframes";
 @use "./utilities/helpers";
