--- a/src/scss/blocks/core-navigation.scss
+++ b/src/scss/blocks/core-navigation.scss
@@ -20,3 +20,12 @@
 		}
 	}
 }
+
+
+/* Bug fix */
+  @media (max-width: $medium){
+	.wp-block-navigation__responsive-container.is-menu-open{
+			min-height:100vh;
+			z-index:9999;
+	}
+}
