--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -23,6 +23,7 @@
 
 @use "./parts/footer";
 @use "./parts/header";
+@use "./parts/header-fixed";
 
 @use "./utilities/keyframes";
 @use "./utilities/helpers";
