--- a/templates/page-with-featured-image.html
+++ b/templates/page-with-featured-image.html
@@ -10,7 +10,7 @@
 <!-- /wp:group -->
 
 <!-- wp:group {"tagName":"main","metadata":{"name":"Main"},"layout":{"type":"default"}} -->
-<main class="wp-block-group"><!-- wp:post-content {"align":"wide","layout":{"type":"constrained"}} /-->
+<main class="wp-block-group"><!-- wp:post-content {"align":"wide","style":{"spacing":{"blockGap":"0"}},"layout":{"type":"constrained"}} /-->
 
 <!-- wp:spacer {"height":"var:preset|spacing|40"} -->
 <div style="height:var(--wp--preset--spacing--40)" aria-hidden="true" class="wp-block-spacer"></div>
