--- a/src/scss/utilities/helpers.scss
+++ b/src/scss/utilities/helpers.scss
@@ -1,6 +1,6 @@
 /**
  * Helper classes
- * @version 0.3.0
+ * @version 0.3.1
  */
 @use "../base/variables" as *;
 
@@ -42,6 +42,9 @@
 }
 .position-relative {
 	position: relative;
+}
+.position-sticky {
+	position: sticky;
 }
 
 /**
