--- a/templates/page-without-title.html
+++ b/templates/page-without-title.html
@@ -1,5 +1,7 @@
 <!-- wp:group {"metadata":{"name":"Wrapper"},"align":"wide","style":{"spacing":{"blockGap":"0"}},"layout":{"type":"default"}} -->
-<div class="wp-block-group alignwide"><!-- wp:group {"tagName":"main","metadata":{"name":"Main"},"layout":{"type":"default"}} -->
+<div class="wp-block-group alignwide"><!-- wp:template-part {"slug":"header","area":"header","align":"wide"} /-->
+
+<!-- wp:group {"tagName":"main","metadata":{"name":"Main"},"layout":{"type":"default"}} -->
 <main class="wp-block-group"><!-- wp:post-content {"align":"wide","style":{"spacing":{"blockGap":"0"}},"layout":{"type":"constrained"}} /--></main>
 <!-- /wp:group -->
 
