Add wpcf7 styling

--- a/src/scss/base/form.scss
+++ b/src/scss/base/form.scss
@@ -2,7 +2,7 @@
 /// Forms & Input Fields
 ///
 
-.form {
+.form, .wpcf7 {
 	label {
 		margin-top: 24px;
 		font-size: var(--wp--preset--font-size--small);
@@ -20,14 +20,14 @@
 		line-height: 1.5;
 		border: 1px solid var(--wp--preset--color--base-5);
 		padding: var(--wp--preset--spacing--10);
-		max-width: stretch; /* https://github.com/hanneslsm/bittnerkrull25/issues/61 */
+		max-width: stretch;
 	}
 	textarea {
 		font-size: 1rem;
 		border-radius: 8px;
 		border: 1px solid var(--wp--preset--color--base-5);
 		padding: var(--wp--preset--spacing--10);
-		max-width: stretch; /* https://github.com/hanneslsm/bittnerkrull25/issues/61 */
+		max-width: stretch;
 	}
 	select {
 		border-radius: 8px;
