--- a/src/scss/base/form.scss
+++ b/src/scss/base/form.scss
@@ -2,7 +2,8 @@
 /// Forms & Input Fields
 ///
 
-.form, .wpcf7 {
+.form,
+.wpcf7 {
 	label {
 		margin-top: 24px;
 		font-size: var(--wp--preset--font-size--small);
