--- a/src/scss/base/typography.scss
+++ b/src/scss/base/typography.scss
@@ -9,3 +9,14 @@ strong {
 .has-xx-large-font-size {
 	line-height: 1.3;
 }
+
+
+/**
+ *  @link https://github.com/WordPress/gutenberg/issues/53146
+ */
+p[style*="text-decoration:none"] * {
+  text-decoration: none;
+  &:hover {
+	text-decoration: underline;
+  }
+}
