--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -3,8 +3,8 @@
 /// Breakpoints are inspired by https://github.com/WordPress/gutenberg/blob/trunk/packages/components/src/utils/breakpoint-values.js
 ///
 
-$huge: 1440px;
-$wide: 1280px;
+//$huge: 1440px;
+//$wide: 1280px;
 $x-large: 1080px;
 $large: 960px; // admin sidebar auto folds // Desktop
 $medium: 782px; // Adminbar goes big. // Tablet
