Add background hover to navigation

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -7,7 +7,7 @@
 //$wide: 1280px;
 $x-large: 1080px;
 $large: 960px; // admin sidebar auto folds // Desktop
-$medium: 782px; // Adminbar goes big. // Tablet
+$medium: 600px; //782px; -> change to navigation break // Adminbar goes big. // Tablet
 // $small: 600px;
 $mobile: 480px;
 // $zoomed-in: 280px;
