Button element: Move to base folder and remove shadow

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -18,7 +18,7 @@
 @use "./base/global";
 @use "./base/typography";
 @use "./base/form";
-@use "./elements/button";
+@use "./base/button";
 @use "./parts/footer";
 @use "./parts/header";
 @use "./parts/header-fixed";
