--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -23,5 +23,5 @@
 @use "./parts/header";
 @use "./parts/header-fixed";
 @use "./utilities/keyframes";
-@use "./utilities/helpers";
+@use "./utilities/withkit-helpers.scss";
 @use "./utilities/on-hover";
