--- a/templates/page-with-title.html
+++ b/templates/page-with-title.html
@@ -1,6 +1,6 @@
 <!-- wp:group {"metadata":{"name":"Wrapper"},"align":"wide","style":{"spacing":{"blockGap":"0"}},"layout":{"type":"default"}} -->
 <div class="wp-block-group alignwide"><!-- wp:group {"align":"wide","style":{"spacing":{"blockGap":"0"}},"layout":{"type":"default"}} -->
-<div class="wp-block-group alignwide"><!-- wp:template-part {"slug":"header","theme":"upa25","area":"header","align":"wide"} /-->
+<div class="wp-block-group alignwide"><!-- wp:template-part {"slug":"header","area":"header","align":"wide"} /-->
 
 <!-- wp:group {"align":"wide","className":"is-style-section-brand-5","style":{"spacing":{"padding":{"bottom":"var:preset|spacing|40","top":"var:preset|spacing|50"}}},"layout":{"type":"constrained"}} -->
 <div class="wp-block-group alignwide is-style-section-brand-5" style="padding-top:var(--wp--preset--spacing--50);padding-bottom:var(--wp--preset--spacing--40)"><!-- wp:post-title {"level":1,"align":"wide"} /--></div>
@@ -11,5 +11,5 @@
 <main class="wp-block-group"><!-- wp:post-content {"align":"wide","style":{"spacing":{"blockGap":"0"}},"layout":{"type":"constrained"}} /--></main>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","theme":"upa25","tagName":"footer"} /--></div>
+<!-- wp:template-part {"slug":"footer","tagName":"footer"} /--></div>
 <!-- /wp:group -->
