--- a/templates/page-with-title-and-spacing.html
+++ b/templates/page-with-title-and-spacing.html
@@ -8,7 +8,7 @@
 <!-- /wp:group -->
 
 <!-- wp:group {"tagName":"main","metadata":{"name":"Main"},"layout":{"type":"default"}} -->
-<main class="wp-block-group"><!-- wp:post-content {"align":"wide","layout":{"type":"constrained"}} /--></main>
+<main class="wp-block-group"><!-- wp:post-content {"align":"wide","style":{"spacing":{"padding":{"top":"var:preset|spacing|30","bottom":"var:preset|spacing|30"}}},"layout":{"type":"constrained"}} /--></main>
 <!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer","tagName":"footer"} /--></div>
