Update description block

--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -17,7 +17,7 @@
 
 <!-- wp:woocommerce/product-price {"isDescendentOfSingleProductTemplate":true,"fontSize":"large"} /-->
 
-<!-- wp:post-excerpt {"excerptLength":100,"__woocommerceNamespace":"woocommerce/product-query/product-summary"} /-->
+<!-- wp:woocommerce/product-summary {"isDescendentOfSingleProductTemplate":true} /-->
 
 <!-- wp:woocommerce/add-to-cart-form {"quantitySelectorStyle":"stepper"} /-->
 
