Refactor src/ folder

--- a/src/blocks/core-cover/styles/blurred.scss
+++ b/src/blocks/core-cover/styles/blurred.scss
@@ -1,7 +1,7 @@
 ///
 /// Blurred: Cover
 ///
-@use "../../base/variables" as *;
+@use "../../../scss/base/variables" as *;
 
 /* Block Style: Blurred
 --------------------------------------------- */
