--- a/src/blocks/core-cover/styles/card--interactive.scss
+++ b/src/blocks/core-cover/styles/card--interactive.scss
@@ -3,7 +3,7 @@
 ///
 /// @link https://developer.wordpress.org/news/2024/07/building-a-card-layout-with-a-hover-reveal-effect/
 ///
-@use "../../base/variables" as *;
+@use "../../../scss/base/variables" as *;
 
 /* Block Style: Cards
 --------------------------------------------- */
