--- a/src/blocks/core-cover/styles/cover-link.scss
+++ b/src/blocks/core-cover/styles/cover-link.scss
@@ -1,7 +1,7 @@
 ///
 /// Cover
 ///
-@use "../../base/variables" as *;
+@use "../../../scss/base/variables" as *;
 
 /* Block Style: Cover Link
 --------------------------------------------- */
