--- a/src/blocks/core-navigation/style.scss
+++ b/src/blocks/core-navigation/style.scss
@@ -2,7 +2,7 @@
 /// Navigation
 ///
 
-@use "../base/variables" as *;
+@use "../../scss/base/variables" as *;
 
 /* General: Navigation Styling
 --------------------------------------------- */
