--- a/src/scss/base/typography.scss
+++ b/src/scss/base/typography.scss
@@ -2,13 +2,31 @@
 /// Font Sizes
 ///
 
+/**
+ *  Bug Fix: Variable font is displayed italic
+ */
+body {
+	font-variation-settings: "slnt" 0; /* Bug Fix: Variable font is displayed italic */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-smooth: never;
+}
+
+/**
+ *  Strong tag font weight adjustment
+ */
 strong {
 	font-weight: 600;
 }
 
+/**
+ * Line height adjustments for font sizes
+ */
 .has-xx-large-font-size {
 	line-height: 1.3;
 }
+
+
 
 /**
  *  @link https://github.com/WordPress/gutenberg/issues/53146
