--- a/src/blocks/core-details/styles/chevron.scss
+++ b/src/blocks/core-details/styles/chevron.scss
@@ -22,8 +22,11 @@
 			justify-content: center;
 			align-items: center;
 			transform: rotate(0deg); /* chevron faces to right */
-			transition: 0.2s;
+			transition: none;
 
+			@media (prefers-reduced-motion: no-preference) {
+				transition: 0.2s;
+			}
 			aspect-ratio: 1/1;
 			content: "\203A"; /* chevron */
 			font-weight: 400;
@@ -31,7 +34,7 @@
 		}
 	}
 	& > :nth-child(2) {
-		margin-block-start: 0px;
+		margin-block-start: 0;
 	}
 	& > :last-child {
 		padding-block-end: var(--wp--preset--spacing--20);
