feat: add styles for various blocks including Calendar, Categories, Comments Pagination, Navigation, Post Content, Query Pagination, Quote, Search, Site Logo, Spacer, Table, and their respective styles

--- a/src/blocks/core-comments-pagination/style.scss
+++ b/src/blocks/core-comments-pagination/style.scss
@@ -5,9 +5,9 @@
 /* General Styling
 --------------------------------------------- */
 /* This navigation style is also used in
-* core-comments-pagination.scss and core-post-content.scss
+* core-post-content.scss and core-query-pagination.scss
 */
-.wp-block-query-pagination-numbers {
+.wp-block-comments-pagination-numbers {
 	.page-numbers {
 		padding: 0.5em 1em;
 		border: 1px solid var(--wp--preset--color--base-4);
