--- a/src/blocks/core-site-logo/style.scss
+++ b/src/blocks/core-site-logo/style.scss
@@ -1,7 +1,9 @@
 ///
-/// Site Logo
+/// Block: Site Logo
 ///
 
+/* General Styling
+--------------------------------------------- */
 .wp-block-site-logo a img {
 	transition: transform 0.3s ease;
 
