--- a/templates/single.html
+++ b/templates/single.html
@@ -1,51 +1,41 @@
 <!-- wp:group {"metadata":{"name":"Wrapper"},"align":"wide","style":{"spacing":{"blockGap":"0"}},"layout":{"type":"default"}} -->
-<div class="wp-block-group alignwide"><!-- wp:group {"align":"wide","style":{"spacing":{"blockGap":"0"}},"layout":{"type":"default"}} -->
 <div class="wp-block-group alignwide"><!-- wp:template-part {"slug":"header","area":"header","align":"wide"} /-->
 
-<!-- wp:group {"align":"wide","className":"is-style-section-brand-5","style":{"spacing":{"padding":{"bottom":"var:preset|spacing|40","top":"var:preset|spacing|50"}}},"layout":{"type":"constrained"}} -->
-<div class="wp-block-group alignwide is-style-section-brand-5" style="padding-top:var(--wp--preset--spacing--50);padding-bottom:var(--wp--preset--spacing--40)"><!-- wp:post-title {"level":1,"align":"wide"} /--></div>
-<!-- /wp:group --></div>
-<!-- /wp:group -->
-
-<!-- wp:group {"tagName":"main","metadata":{"name":"Main"},"layout":{"type":"default"}} -->
-<main class="wp-block-group"><!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|30","bottom":"var:preset|spacing|30"}}},"layout":{"type":"constrained"}} -->
-<div class="wp-block-group" style="padding-top:var(--wp--preset--spacing--30);padding-bottom:var(--wp--preset--spacing--30)"><!-- wp:columns {"align":"wide","style":{"spacing":{"blockGap":{"left":"var:preset|spacing|30"}}}} -->
-<div class="wp-block-columns alignwide"><!-- wp:column {"width":"50%","className":"with-display-none-when-empty"} -->
-<div class="wp-block-column with-display-none-when-empty" style="flex-basis:50%"><!-- wp:post-featured-image /--></div>
+<!-- wp:group {"metadata":{"name":"Title Section"},"align":"wide","className":"is-style-section-brand-5","style":{"spacing":{"padding":{"bottom":"var:preset|spacing|20","top":"var:preset|spacing|20"},"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group alignwide is-style-section-brand-5" style="margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20)"><!-- wp:columns {"align":"wide"} -->
+<div class="wp-block-columns alignwide"><!-- wp:column {"verticalAlignment":"center","width":""} -->
+<div class="wp-block-column is-vertically-aligned-center"><!-- wp:post-title {"level":1,"align":"wide","style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}}} /--></div>
 <!-- /wp:column -->
 
-<!-- wp:column {"width":"100%","layout":{"type":"constrained"}} -->
-<div class="wp-block-column" style="flex-basis:100%"><!-- wp:post-content {"align":"wide","layout":{"type":"constrained"}} /--></div>
+<!-- wp:column {"verticalAlignment":"center","width":"180px"} -->
+<div class="wp-block-column is-vertically-aligned-center" style="flex-basis:180px"><!-- wp:post-featured-image {"width":"180px","height":"","align":"center"} /--></div>
 <!-- /wp:column --></div>
 <!-- /wp:columns --></div>
 <!-- /wp:group -->
 
-<!-- wp:group {"tagName":"section","metadata":{"categories":["upa25/cards"],"patternName":"upa25/card-6","name":"Card-6"},"align":"full","className":"is-style-section-brand-5","backgroundColor":"brand-6","layout":{"type":"constrained"}} -->
-<section class="wp-block-group alignfull is-style-section-brand-5 has-brand-6-background-color has-background"><!-- wp:group {"align":"wide","layout":{"type":"default"}} -->
-<div class="wp-block-group alignwide"><!-- wp:spacer {"height":"var:preset|spacing|20"} -->
-<div style="height:var(--wp--preset--spacing--20)" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer -->
+<!-- wp:group {"metadata":{"name":"Main"},"align":"full","layout":{"type":"default"}} -->
+<div class="wp-block-group alignfull"><!-- wp:post-content {"align":"full","style":{"spacing":{"margin":{"top":"var:preset|spacing|30","bottom":"var:preset|spacing|30"}}},"layout":{"type":"constrained"}} /--></div>
+<!-- /wp:group -->
 
-<!-- wp:columns -->
+<!-- wp:group {"tagName":"section","metadata":{"categories":["upa25/cards"],"patternName":"upa25/card-6","name":"Post Navigation Section"},"align":"full","className":"is-style-section-brand-5","layout":{"type":"constrained"}} -->
+<section class="wp-block-group alignfull is-style-section-brand-5"><!-- wp:group {"align":"wide","style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}},"layout":{"type":"default"}} -->
+<div class="wp-block-group alignwide" style="padding-top:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20)"><!-- wp:columns -->
 <div class="wp-block-columns"><!-- wp:column -->
 <div class="wp-block-column"><!-- wp:group {"className":"with-display-none-when-empty","style":{"spacing":{"padding":{"right":"var:preset|spacing|20","left":"var:preset|spacing|20","top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}},"layout":{"type":"default"}} -->
-<div class="wp-block-group with-display-none-when-empty" style="padding-top:var(--wp--preset--spacing--20);padding-right:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--20)"><!-- wp:post-navigation-link {"type":"previous","showTitle":true,"arrow":"arrow","style":{"typography":{"textDecoration":"none"}}} /--></div>
+<div class="wp-block-group with-display-none-when-empty" style="padding-top:var(--wp--preset--spacing--20);padding-right:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--20)"><!-- wp:post-navigation-link {"textAlign":"center","type":"previous","showTitle":true,"arrow":"arrow","style":{"typography":{"textDecoration":"none"}}} /--></div>
 <!-- /wp:group --></div>
 <!-- /wp:column -->
 
 <!-- wp:column -->
 <div class="wp-block-column"><!-- wp:group {"className":"with-display-none-when-empty","style":{"spacing":{"padding":{"right":"var:preset|spacing|20","left":"var:preset|spacing|20","top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}},"layout":{"type":"default"}} -->
-<div class="wp-block-group with-display-none-when-empty" style="padding-top:var(--wp--preset--spacing--20);padding-right:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--20)"><!-- wp:post-navigation-link {"showTitle":true,"arrow":"arrow","style":{"typography":{"textDecoration":"none"}}} /--></div>
+<div class="wp-block-group with-display-none-when-empty" style="padding-top:var(--wp--preset--spacing--20);padding-right:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--20)"><!-- wp:post-navigation-link {"textAlign":"center","showTitle":true,"arrow":"arrow","style":{"typography":{"textDecoration":"none"}}} /--></div>
 <!-- /wp:group --></div>
 <!-- /wp:column --></div>
-<!-- /wp:columns -->
-
-<!-- wp:spacer {"height":"var:preset|spacing|20"} -->
-<div style="height:var(--wp--preset--spacing--20)" aria-hidden="true" class="wp-block-spacer"></div>
-<!-- /wp:spacer --></div>
+<!-- /wp:columns --></div>
 <!-- /wp:group --></section>
-<!-- /wp:group --></main>
 <!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"page-comments","area":"uncategorized"} /-->
 
 <!-- wp:template-part {"slug":"footer","tagName":"footer"} /--></div>
 <!-- /wp:group -->
