--- a/templates/category.html
+++ b/templates/category.html
@@ -7,23 +7,27 @@
 
 <!-- wp:group {"tagName":"main","metadata":{"name":"Main"},"style":{"spacing":{"padding":{"top":"var:preset|spacing|40","bottom":"var:preset|spacing|40"}}},"layout":{"type":"constrained"}} -->
 <main class="wp-block-group" style="padding-top:var(--wp--preset--spacing--40);padding-bottom:var(--wp--preset--spacing--40)"><!-- wp:group {"align":"wide","layout":{"type":"default"}} -->
-<div class="wp-block-group alignwide"><!-- wp:query {"queryId":0,"query":{"perPage":12,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"exclude","inherit":false,"parents":[],"format":[]},"layout":{"type":"constrained","contentSize":"960px"}} -->
-<div class="wp-block-query"><!-- wp:post-template {"layout":{"type":"default"}} -->
-<!-- wp:columns {"verticalAlignment":null,"style":{"border":{"width":"1px"},"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20","left":"var:preset|spacing|20","right":"var:preset|spacing|20"},"blockGap":{"left":"var:preset|spacing|30"}}},"borderColor":"brand-4"} -->
-<div class="wp-block-columns has-border-color has-brand-4-border-color" style="border-width:1px;padding-top:var(--wp--preset--spacing--20);padding-right:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--20)"><!-- wp:column {"verticalAlignment":"center","width":"180px","className":"with-display-none-when-empty"} -->
-<div class="wp-block-column is-vertically-aligned-center with-display-none-when-empty" style="flex-basis:180px"><!-- wp:post-featured-image {"isLink":true,"aspectRatio":"auto","width":"180px","sizeSlug":"large"} /--></div>
+<div class="wp-block-group alignwide"><!-- wp:query {"queryId":0,"query":{"perPage":12,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"exclude","inherit":false,"parents":[],"format":[]},"layout":{"type":"default"}} -->
+<div class="wp-block-query"><!-- wp:post-template {"layout":{"type":"grid","columnCount":null,"minimumColumnWidth":"30rem"}} -->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20","left":"var:preset|spacing|20","right":"var:preset|spacing|20"}},"border":{"width":"1px"},"dimensions":{"minHeight":"100%"}},"borderColor":"brand-4","layout":{"type":"flex","orientation":"vertical"}} -->
+<div class="wp-block-group has-border-color has-brand-4-border-color" style="border-width:1px;min-height:100%;padding-top:var(--wp--preset--spacing--20);padding-right:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--20)"><!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"default"}} -->
+<div class="wp-block-group"><!-- wp:post-terms {"term":"category"} /-->
+
+<!-- wp:post-title {"level":3,"isLink":true} /--></div>
+<!-- /wp:group -->
+
+<!-- wp:columns {"style":{"spacing":{"blockGap":{"left":"var:preset|spacing|20"}}}} -->
+<div class="wp-block-columns"><!-- wp:column {"verticalAlignment":"top","width":"160px","className":"with-display-none-when-empty"} -->
+<div class="wp-block-column is-vertically-aligned-top with-display-none-when-empty" style="flex-basis:160px"><!-- wp:post-featured-image {"isLink":true,"aspectRatio":"auto","width":"150px","height":"","scale":"contain","sizeSlug":"large"} /--></div>
 <!-- /wp:column -->
 
-<!-- wp:column {"verticalAlignment":"center","width":""} -->
-<div class="wp-block-column is-vertically-aligned-center"><!-- wp:post-terms {"term":"category"} /-->
-
-<!-- wp:post-title {"level":3,"isLink":true} /-->
-
-<!-- wp:post-excerpt {"moreText":"","showMoreOnNewLine":false,"excerptLength":100} /-->
+<!-- wp:column {"verticalAlignment":"top","width":""} -->
+<div class="wp-block-column is-vertically-aligned-top"><!-- wp:post-excerpt {"moreText":"","showMoreOnNewLine":false,"excerptLength":100} /-->
 
 <!-- wp:read-more {"content":""} /--></div>
 <!-- /wp:column --></div>
-<!-- /wp:columns -->
+<!-- /wp:columns --></div>
+<!-- /wp:group -->
 <!-- /wp:post-template -->
 
 <!-- wp:query-no-results -->
