--- a/src/scss/base/helpers.scss
+++ b/src/scss/base/helpers.scss
@@ -1,6 +1,6 @@
 /**
  * Helper classes
- * @version 1.0.0
+ * @version 1.1.0
  */
 @use "../base/variables" as *;
 
@@ -186,6 +186,12 @@
 }
 .with-position-sticky {
 	position: sticky;
+}
+.with-float-right {
+	float: right;
+}
+.with-float-left {
+	float: left;
 }
 
 /* Responsive
